--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
 :root {
-  --main-color:  rgb(19, 17, 26);
+  --main-color: rgb(19, 17, 26);
   --secondary-color: magenta;
 }
 
 body {
   background-color: var(--main-color);
+  color: var(--secondary-color);
 }
 
 .diamond-container {
@@ -20,10 +21,10 @@ body {
   transform-origin: center;
   transform: rotate(45deg);
   opacity: 0.8;
+
   /* transition: 0.4s opacity; */
   transition: 0.8s background-color;
   transition: width 2s, height 2s;
-  
 }
 
 .diamond:hover {
