--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,51 @@
 :root {
   --main-color: rgb(19, 17, 26);
   --secondary-color: rgb(255, 255, 255);
+  --button-color: #53366b;
+  --button-color2: #442b58;
+  --button-shadow: #45345370;
 }
 
 body {
   background-color: var(--main-color);
   color: var(--secondary-color);
+}
+
+.pokedex {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  align-items: center;
+}
+
+.pokemon-list {
+  list-style-type: none;
+  text-align: left;
+}
+
+.button {
+  padding: 10px 10px;
+  font-family: inherit;
+  background-color: var(--button-color);
+  color: var(--txt-white);
+  border: none;
+  margin: 5px 0;
+  width: 100%;
+  box-shadow: 0 7px var(--button-shadow);
+}
+
+.button:hover {
+  background-color: var(--button-color2);
+  cursor: pointer;
+}
+
+.button:active {
+  background-color: var(--button-color2);
+  box-shadow: 0 3px var(--button-shadow);
+  transform: translateY(4px);
+  border: none;
+}
+
+ul {
+  padding-inline-start: 0%;
 }
