--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,16 @@ body {
   border: none;
 }
 
+.loading {
+  position: fixed;
+  height: 300px;
+  width: 300px;
+  top: 50%;
+  left: 50%;
+  margin-top: -150px;
+  margin-left: -150px;
+}
+
 ul {
   padding-inline-start: 0%;
 }
