--- a/css/style.css
+++ b/css/style.css
@@ -13,16 +13,24 @@ body {
   text-transform: capitalize;
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  max-width: 100%;
+  height: 100%;
+}
+
 .pokedex {
   display: flex;
+  position: absolute;
   flex-direction: column;
-  max-width: 100%;
   align-items: center;
 }
 
 .pokemon-list {
   list-style-type: none;
-  text-align: left;
+  padding-left: 0;
+  text-align: center;
 }
 
 .button,
