--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ body {
 .button2 {
   margin-left: 75%;
   width: 20%;
+  height: 40px;
 }
 
 .loading {
@@ -82,20 +83,19 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  
+
   /* to show it above other content */
-  z-index: 999; 
-  
+  z-index: 999;
+
   /* to allow scrolling if the screen is not high enough */
-  overflow: auto; 
-  
+  overflow: auto;
+
   /* this is used to center the modal */
   display: none;
   text-align: center;
 }
 
-#modal-container.is-visible {
+.modal {
   display: grid;
   position: fixed;
   left: 50%;
@@ -103,15 +103,19 @@ body {
   transform: translate(-50%, -50%);
   width: 40vh;
   height: 40vh;
-  background: black;
+  background: var(--main-color);
   border: 3px solid var(--button-color);
 }
 
-.modal img {
-  margin: 0;
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+#modal-container img {
+  margin: auto;
   width: 50%;
+}
+
+#modal-container {
+  display: none;
+}
+
+#modal-container.is-visible {
+  display: grid;
 }
