--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: #0f081479;
 
   /* to show it above other content */
   z-index: 999;
