--- a/css/styles.css
+++ b/css/styles.css
@@ -11,3 +11,14 @@
   text-decoration: none;
   color: rgb(195, 42, 34);
 }
+
+.loading {
+  /* height: 100%; */
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background-repeat: no-repeat;
+}
