--- a/css/styles.css
+++ b/css/styles.css
@@ -21,4 +21,23 @@
   right: 0;
   margin: auto;
   background-repeat: no-repeat;
+  width: 170px;
+  height: 170px;
+  z-index: 2000
+}
+
+.overlay.hide {
+  opacity: 0
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1040;
+  width: 100vw;
+  height: 100vh;
+  background-color: #000;
+  opacity: .5;
+  transition: opacity .15s linear;
 }
